asg-bastion-nginx.tf
# create sns topic for all the autoscaling groups
resource "aws_sns_topic" "kiff-sns" {
  name = "Default_CloudWatch_Alarms_Topic"
}

# create notification for all the autoscaling groups
resource "aws_autoscaling_notification" "kiff-notification" {
  group_names = [
      aws_autoscaling_group.bastion-asg.name,
      aws_autoscaling_group.nginx-asg.name,
      aws_autoscaling_group.wordpress-asg.name,
      aws_autoscaling_group.tooling-asg.name,
  ]
  notifications = [
      "autoscaling:EC2_INSTANCE_LAUNCH",
      "autoscaling:EC2_INSTANCE_TERMINATE",
      "autoscaling:EC2_INSTANCE_LAUNCH_ERROR",
      "autoscaling:EC2_INSTANCE_TERMINATE_ERROR",
  ]

  topic_arn = aws_sns_topic.kiff-sns.arn
}



resource "random_shuffle" "az_list" {
  input = data.aws_availability_zones.available.names
}
#--- create launch template for bastion ---
resource "aws_launch_template" "bastion-launch-template" {
  image_id = var.ami
  instance_type = "t2.micro"
  vpc_security_group_ids = [aws_security_group.bastion-sg.id]
  
  iam_instance_profile {
    name = aws_iam_instance_profile.instProfile.id
  }

  key_name = var.keypair

  placement {
    availability_zone = "random_shuffle.az_list.result"
  }

  lifecycle {
    create_before_destroy = true
  }

  tag_specifications {
      resource_type = "instance"

      tags = merge(
          var.tags,
          {
              Name = "bastion-launch-template"
          }
      )
  }

  user_data = filebase64("${path.module}/bastion.sh")
}

#--- Autoscaling for bastion hosts
resource "aws_autoscaling_group" "bastion-asg" {
   name = "bastion-asg"
   max_size = 2
   min_size = 1
   health_check_grace_period = 300
   health_check_type = "ELB"
   desired_capacity = 1

   vpc_zone_identifier = [
       aws_subnet.public[0].id,
       aws_subnet.public[1].id
   ]

   launch_template {
     id = aws_launch_template.bastion-launch-template.id
     version = "$Latest"
   }
   tag {
       key = "Name"
       value = "bastion-launch-template"
       propagate_at_launch = true
   }
}



# launch template for nginx
resource "aws_launch_template" "nginx-launch-template" {
    image_id = var.ami
    instance_type = "t2.micro"
    vpc_security_group_ids = [aws_security_group.nginx-sg.id] 
    
    iam_instance_profile {
      name = aws_iam_instance_profile.instProfile.id
    }

    key_name = var.keypair
    
    placement {
      availability_zone = "random_shuffle.az_list.result"
    }

    lifecycle {
      create_before_destroy = true
    }

    tag_specifications {
      resource_type = "instance"

      tags = merge (
         var.tags,
         {
             Name = "nginx-launch-template"
         }, 
      )
    }

    user_data = filebase64("${path.module}/nginx.sh")
}

# create autoscaling group for nginx
resource "aws_autoscaling_group" "nginx-asg" {
    name = "nginx-asg"
    max_size = 2
    min_size = 1
    health_check_type = "ELB"
    health_check_grace_period = 300
    desired_capacity = 1

    vpc_zone_identifier = [
        aws_subnet.public[0].id,
        aws_subnet.public[1].id
    ]

    launch_template {
      id = aws_launch_template.nginx-launch-template.id
      version = "$Latest"
    }

    tag {
      key = "Name"
      value = "nginx-launch-template"
      propagate_at_launch = true
    } 

}


# attach the autoscaling group of nginx to external load balancer
resource "aws_autoscaling_attachment" "asg_attachment_nginx" {
    autoscaling_group_name = aws_autoscaling_group.nginx-asg.id
    alb_target_group_arn = aws_lb_target_group.nginx-tgt.arn
}
